minidecaf/generator/MiniDecafParser.py
# Generated from MiniDecaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniDecafParser ( Parser ):

    grammarFileName = "MiniDecaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'int'", "'*'", 
                     "'{'", "'}'", "'return'", "'if'", "'else'", "'for'", 
                     "'while'", "'do'", "'break'", "'continue'", "'['", 
                     "']'", "'='", "'?'", "':'", "'||'", "'&&'", "'-'", 
                     "'!'", "'~'", "'&'", "'+'", "'/'", "'%'", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Integer", "Indentifier", "WhiteSpace" ]

    RULE_prog = 0
    RULE_externalDecl = 1
    RULE_func = 2
    RULE_parameterList = 3
    RULE_ty = 4
    RULE_blockItem = 5
    RULE_block = 6
    RULE_stmt = 7
    RULE_expr = 8
    RULE_decl = 9
    RULE_asgn = 10
    RULE_cond = 11
    RULE_logical_or = 12
    RULE_logical_and = 13
    RULE_equality = 14
    RULE_relational = 15
    RULE_additive = 16
    RULE_multiplicative = 17
    RULE_cast = 18
    RULE_unary = 19
    RULE_postfix = 20
    RULE_primary = 21
    RULE_argmentList = 22
    RULE_unaryList = 23
    RULE_addList = 24
    RULE_assignList = 25
    RULE_mulList = 26
    RULE_relationList = 27
    RULE_equalList = 28

    ruleNames =  [ "prog", "externalDecl", "func", "parameterList", "ty", 
                   "blockItem", "block", "stmt", "expr", "decl", "asgn", 
                   "cond", "logical_or", "logical_and", "equality", "relational", 
                   "additive", "multiplicative", "cast", "unary", "postfix", 
                   "primary", "argmentList", "unaryList", "addList", "assignList", 
                   "mulList", "relationList", "equalList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    Integer=37
    Indentifier=38
    WhiteSpace=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniDecafParser.EOF, 0)

        def externalDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExternalDeclContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExternalDeclContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = MiniDecafParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.externalDecl()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MiniDecafParser.T__4):
                    break

            self.state = 63
            self.match(MiniDecafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_externalDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclExternalDeclContext(ExternalDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.ExternalDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def decl(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclExternalDecl" ):
                listener.enterDeclExternalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclExternalDecl" ):
                listener.exitDeclExternalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclExternalDecl" ):
                return visitor.visitDeclExternalDecl(self)
            else:
                return visitor.visitChildren(self)


    class FuncExternalDeclContext(ExternalDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.ExternalDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func(self):
            return self.getTypedRuleContext(MiniDecafParser.FuncContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncExternalDecl" ):
                listener.enterFuncExternalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncExternalDecl" ):
                listener.exitFuncExternalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncExternalDecl" ):
                return visitor.visitFuncExternalDecl(self)
            else:
                return visitor.visitChildren(self)



    def externalDecl(self):

        localctx = MiniDecafParser.ExternalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalDecl)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = MiniDecafParser.FuncExternalDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.func()
                pass

            elif la_ == 2:
                localctx = MiniDecafParser.DeclExternalDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.decl()
                self.state = 67
                self.match(MiniDecafParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_func

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(MiniDecafParser.TyContext,0)

        def Indentifier(self):
            return self.getToken(MiniDecafParser.Indentifier, 0)
        def parameterList(self):
            return self.getTypedRuleContext(MiniDecafParser.ParameterListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class FuncDefContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(MiniDecafParser.TyContext,0)

        def Indentifier(self):
            return self.getToken(MiniDecafParser.Indentifier, 0)
        def parameterList(self):
            return self.getTypedRuleContext(MiniDecafParser.ParameterListContext,0)

        def block(self):
            return self.getTypedRuleContext(MiniDecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)



    def func(self):

        localctx = MiniDecafParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MiniDecafParser.FuncDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.ty(0)
                self.state = 72
                self.match(MiniDecafParser.Indentifier)
                self.state = 73
                self.match(MiniDecafParser.T__1)
                self.state = 74
                self.parameterList()
                self.state = 75
                self.match(MiniDecafParser.T__2)
                self.state = 76
                self.block()
                pass

            elif la_ == 2:
                localctx = MiniDecafParser.FuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.ty(0)
                self.state = 79
                self.match(MiniDecafParser.Indentifier)
                self.state = 80
                self.match(MiniDecafParser.T__1)
                self.state = 81
                self.parameterList()
                self.state = 82
                self.match(MiniDecafParser.T__2)
                self.state = 83
                self.match(MiniDecafParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = MiniDecafParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniDecafParser.T__4:
                self.state = 87
                self.decl()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniDecafParser.T__3:
                    self.state = 88
                    self.match(MiniDecafParser.T__3)
                    self.state = 89
                    self.decl()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_ty

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PtrTypeContext(TyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.TyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(MiniDecafParser.TyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPtrType" ):
                listener.enterPtrType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPtrType" ):
                listener.exitPtrType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPtrType" ):
                return visitor.visitPtrType(self)
            else:
                return visitor.visitChildren(self)


    class IntTypeContext(TyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.TyContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntType" ):
                listener.enterIntType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntType" ):
                listener.exitIntType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntType" ):
                return visitor.visitIntType(self)
            else:
                return visitor.visitChildren(self)



    def ty(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniDecafParser.TyContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_ty, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = MiniDecafParser.IntTypeContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 98
            self.match(MiniDecafParser.T__4)
            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniDecafParser.PtrTypeContext(self, MiniDecafParser.TyContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_ty)
                    self.state = 100
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 101
                    self.match(MiniDecafParser.T__5) 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_blockItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlockItemStmtContext(BlockItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.BlockItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItemStmt" ):
                listener.enterBlockItemStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItemStmt" ):
                listener.exitBlockItemStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItemStmt" ):
                return visitor.visitBlockItemStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockItemDeclContext(BlockItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.BlockItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def decl(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockItemDecl" ):
                listener.enterBlockItemDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockItemDecl" ):
                listener.exitBlockItemDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItemDecl" ):
                return visitor.visitBlockItemDecl(self)
            else:
                return visitor.visitChildren(self)



    def blockItem(self):

        localctx = MiniDecafParser.BlockItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockItem)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniDecafParser.T__0, MiniDecafParser.T__1, MiniDecafParser.T__5, MiniDecafParser.T__6, MiniDecafParser.T__8, MiniDecafParser.T__9, MiniDecafParser.T__11, MiniDecafParser.T__12, MiniDecafParser.T__13, MiniDecafParser.T__14, MiniDecafParser.T__15, MiniDecafParser.T__23, MiniDecafParser.T__24, MiniDecafParser.T__25, MiniDecafParser.T__26, MiniDecafParser.Integer, MiniDecafParser.Indentifier]:
                localctx = MiniDecafParser.BlockItemStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.stmt()
                pass
            elif token in [MiniDecafParser.T__4]:
                localctx = MiniDecafParser.BlockItemDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.decl()
                self.state = 109
                self.match(MiniDecafParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.BlockItemContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.BlockItemContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniDecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MiniDecafParser.T__6)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniDecafParser.T__0) | (1 << MiniDecafParser.T__1) | (1 << MiniDecafParser.T__4) | (1 << MiniDecafParser.T__5) | (1 << MiniDecafParser.T__6) | (1 << MiniDecafParser.T__8) | (1 << MiniDecafParser.T__9) | (1 << MiniDecafParser.T__11) | (1 << MiniDecafParser.T__12) | (1 << MiniDecafParser.T__13) | (1 << MiniDecafParser.T__14) | (1 << MiniDecafParser.T__15) | (1 << MiniDecafParser.T__23) | (1 << MiniDecafParser.T__24) | (1 << MiniDecafParser.T__25) | (1 << MiniDecafParser.T__26) | (1 << MiniDecafParser.Integer) | (1 << MiniDecafParser.Indentifier))) != 0):
                self.state = 114
                self.blockItem()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(MiniDecafParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class NullstmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullstmt" ):
                listener.enterNullstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullstmt" ):
                listener.exitNullstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullstmt" ):
                return visitor.visitNullstmt(self)
            else:
                return visitor.visitChildren(self)


    class ForStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.init = None # ExprContext
            self.control = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.th = None # StmtContext
            self.el = None # StmtContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForDeclStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.init = None # DeclContext
            self.control = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)

        def decl(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForDeclStmt" ):
                listener.enterForDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForDeclStmt" ):
                listener.exitForDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForDeclStmt" ):
                return visitor.visitForDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)

        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStmt" ):
                listener.enterDoWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStmt" ):
                listener.exitDoWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStmt" ):
                return visitor.visitDoWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(MiniDecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class BreakStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)
